--- a/todo_app/requirements.txt
+++ b/todo_app/requirements.txt
@@ -18,3 +18,10 @@ uvicorn==0.34.3
 uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
+fastapi
+uvicorn[standard]
+sqlalchemy
+psycopg2-binary
+python-jose[cryptography]
+passlib[bcrypt]
+pydantic
